--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 25
@@ -22,6 +23,12 @@ android {
         exclude 'META-INF/rxjava.properties'
     }
 
+    greendao {
+        schemaVersion 1
+        daoPackage 'cn.richinfo.frame.db'
+        targetGenDir 'src/main/java'
+    }
+
     buildTypes {
         release {
             debuggable false
@@ -36,14 +43,15 @@ android {
             buildConfigField "String", "HOST", "\"http://roodo.zj.chinamobile.com\""
         }
     }
+
 }
+
 
 dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-annotations:26.0.0-alpha1'
     compile 'com.android.support:design:25.3.1'
@@ -52,32 +60,27 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:percent:25.3.1'
-
     //annotations
     compile 'com.google.guava:guava:20.0'
-
     //view inject
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-
     //network
     compile 'com.squareup.okhttp3:logging-interceptor:3.7.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-
     //rxjave rxandroid
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.10'
-
     //内存泄露
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
-
     //imageloader
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     //圆角图片
     compile 'com.makeramen:roundedimageview:2.3.0'
 
+    //greendao数据库
+    compile 'org.greenrobot:greendao:3.2.2'
 }
